fixed search box overlapp

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -153,6 +153,12 @@ h5 {
     margin-top: 0px;
   }
 }
+
+@media (max-width: 767px) {
+  .box-fix{
+    margin-bottom: 90px !important;
+  }
+}
 @media (min-width: 768px) {
   .container {
     width: 750px;
